[package]
name = "CanaryKeysCore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Crypto
AmanitaMuscaria = "0.0.3"
blake2 = "0.10.2"
blake2-rfc = "0.2.18"

# Web
url = "2.2.2"

# Time
chrono = "0.4.19"

# Validation
CanaryValidationLib = "0.1.1"