[package]
name = "CanaryKeysCore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Crypto
AmanitaMuscaria = "0.0.4"
blake2 = "0.10.2"
blake2-rfc = "0.2.18"
blake3 = "1.3.0"

# Web
url = "2.2.2"

# Time
chrono = "0.4.19"

# Validation
CanaryValidationLib = "0.1.1"

# Serialization
serde = { version = "1.0.133", features=["derive"]}

# Networking
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }

tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }

# Encoding
hex = "0.4.3"

# Random
getrandom = "0.2.4"