[package]
name = "CanaryKeysCore"
version = "0.0.1"
edition = "2021"
description = "A Blockchain For Social Media and Web of Trust"
license = "APACHE 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Crypto
AmanitaMuscaria = "0.0.5"
blake2 = "0.10.2"
blake2-rfc = "0.2.18"
blake3 = "1.3.0"

# Web
url = "2.2.2"

# Time
chrono = "0.4.19"

# Validation
CanaryValidationLib = "0.1.1"

# Serialization
serde = { version = "1.0.133", features=["derive"]}
serde_json = "1.0.79"

# Encoding
hex = "0.4.3"
base32 = "0.4.0"

# Random
getrandom = "0.2.4"

log = "0.4.14"